--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" />
      <link rel="stylesheet" href="css/styles.css" />
      <link rel="stylesheet" href="css/jquery.countdown.css" />
+     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
 
     <title>Ride O Fest</title>
