--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <p>Registrations Opening Soon In</p>
+                    <p class="top">Registrations</p>
+                    <p class="bottom">Opening Soon</p>
                 </div>
             </div>
         </div>
