--- a/index.html
+++ b/index.html
@@ -45,7 +45,13 @@
             <div class="row">
                 <div class="col-md-12">
                     <div id="countdown"></div>
-
+                    
+                    <div class="tags">
+                        <span class="d">Days</span>
+                        <span class="h">Hours</span>
+                        <span class="m">Minutes</span>
+                        <span class="s">Seconds</span>
+                    </div>
 		            <!-- <p id="note"></p> -->
                     
                 </div>
